tests/parsing/fail/illegal_pragma.circom
pragma 2;
pragma lol;

pragma circom;
pragma circom ax;
pragma circom 0xa.1.2;


template T() {
}

component main = T();
